--- a/Astr-119-Final-Project-Monte-Carlo-Integration.ipynb
+++ b/Astr-119-Final-Project-Monte-Carlo-Integration.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 500\n",
+    "N = 10000\n",
     "\n",
     "a = 0\n",
     "b = 1.75\n",
@@ -33,7 +33,8 @@
    "source": [
     "x = np.arange(a,b,0.01)\n",
     "y = f(x)\n",
-    "fmax = max(y)\n",
+    "d = max(y)\n",
+    "c = min(y)\n",
     "x_rand = a + (b - a)*np.random.random(N)\n",
     "y_rand = np.random.random(N)*fmax"
    ]
@@ -54,8 +55,7 @@
     "\n",
     "print (\"Number of points above the function:\", len(ind_above[0]))\n",
     "print (\"Number of points below the function:\", len(ind_below[0]))\n",
-    "#FIX!!!!\n",
-    "print (\"Fraction of points below the function:\", len((ind_below[0])/N)*((fmax)*(b-a)))"
+    "print (\"Fraction of points below the function:\", len((ind_below[0])/N)*((d-c)*(b-a)))"
    ]
   },
   {
